audio conversions post added

--- a/blog.html
+++ b/blog.html
@@ -343,48 +343,53 @@
             </a>
           </li>
           <li>
+            <a href="audio_conversions.html">
+              Chapter 7: Converting audio between formats
+            </a>
+          </li>
+          <li>
             <a href="images_to_video.html">
-              Chapter 7: Turn images to videos and back
+              Chapter 8: Turn images to videos and back
             </a>
           </li>
           <li>
             <a href="dataframe_indexing.html">
-              Chapter 8: How to slice and index pandas DataFrames
+              Chapter 9: How to slice and index pandas DataFrames
             </a>
           </li>
           <li>
             <a href="db_first_db.html">
-              Chapter 9: Create your first database in SQLite
+              Chapter 10: Create your first database in SQLite
             </a>
           </li>
           <li>
             <a href="db_awkwardness.html">
-              Chapter 10: Navigating the awkwardness of databases
+              Chapter 11: Navigating the awkwardness of databases
             </a>
           </li>
           <li>
             <a href="db_penguins.html">
-              Chapter 11: Converting a csv to a database
+              Chapter 12: Converting a csv to a database
             </a>
           </li>
           <li>
             <a href="ds_msft.html">
-              Chapter 12: Data science for beginners
+              Chapter 13: Data science for beginners
             </a>
           </li>
           <li>
             <a href="pocket_guide_data_science.html">
-              Chapter 13: How data science works
+              Chapter 14: How data science works
             </a>
           </li>
           <li>
             <a href="data_science_other_stuff.html">
-              Chapter 14: There is more to data science than machine learning
+              Chapter 15: There is more to data science than machine learning
             </a>
           </li>
           <li>
             <a href="data_science_archetypes.html">
-              Chapter 15: Data science archetypes
+              Chapter 16: Data science archetypes
             </a>
           </li>
         </ul>          
