--- a/rss.html
+++ b/rss.html
@@ -237,7 +237,7 @@ but any html that gives the aggregator pause will usually just be skipped over.<
 <p>
 There are a number of
 <a href="https://www.rssboard.org/rss-specification#hrelementsOfLtitemgt">other item elements</a>
-you an add if you wish, but these are the subset I've found most useful.
+you an add if you wish, but this is the subset I've found most useful.
 </p>
 
 <p>
@@ -289,48 +289,51 @@ was oblivious to.
 <h3><a id="Things-that-you-give-up"></a><a href="#Things-that-you-give-up">Things that you give up</a></h3>
 
 <p>
-Analytics
-Dopamine
-Engagement
-Interaction.
-Infinite scrolling
-Doom scrolling
-Accidental discovery
-Polish and
+When you send an RSS post out into the Internet, you can't tell whether one
+person sees it or a thousand. You have no <strong>analytics</strong>, no likes, hearts,
+or stars, no engagement dopamine. There is also no <strong>interaction</strong> with your
+your readers, no comment section, Q and A, or quote posts.
+There is also no <strong>algorithm</strong> you can game for boosting. Posts
+just show up in the order they are published.
 </p>
 
 <h3><a id="Things-you-get"></a><a href="#Things-you-get">Things you get</a></h3>
 
 <p>
-Control.
-Things that you give up
-Analytics
-Dopamine
-Engagement
-Interaction.
-Reach.Boosting. There is no algorithm, just posts showing up in order.
-Deliberate reading
+In exchange for all that, you get a more <strong>deliberate experience</strong> of reading and writing.
+There is more friction in publishing and following a feed than of downloading
+an app and snapping a picture of your latte.
+RSS requires intention, and so invites more thought.
+It makes doomscrolling all but impossible.
+Related to this, posts are often longer and more thought out than
+the Tweets of yore. In my experience there are
+<strong>more quirks and rabbit holes</strong>.
+Most importantly, you also get <strong>control</strong> over what you can publish and
+in what format.  You have independence from any rules or policy decisions
+that might be imposed by a central authority.
+There is no one who can boost it, bury it, or shut it down.
+It is an indestructible distribution channel.
 </p>
 
-<p>
-Control.
-Independence no From corporate constraints.
-An indestructible distribution channel.
-More deliberate content.
-Quirk.
-Rabbit holes.
-</p>
+<h3><a id="A-note-about-Atom"></a><a href="#A-note-about-Atom">A note about Atom</a></h3>
 
 <p>
-It's a great starting point for creating your own RSS.
-</p>
-
-<p>
-<a href="https://www.rssboard.org/rss-specification">The full RSS 2.0 specification</a>
-</p>
-
-<p>
+You don't have to spend long in the world of RSS before you start hearing about
+Atom. Atom is a very similar format that serves a very similar purpose.
+It was backed by Google and for a while there was a great deal of contention
+between proponents of RSS and Atom, which led to a lot of intense...um...discussion. 
 <a href="https://danielmiessler.com/blog/atom-rss-why-we-should-just-call-them-feeds-instead-of-rss-feeds">Atom is better</a>
+in the sense that it resolved several points of ambiguous behavior and
+unappealing flaws of RSS, but in retrospect, the "reader wars" were probably
+more distracting than productive and left the community a little fragmented.
+</p>
+
+<p>
+Atom still exists. Plenty of people still use it, although from what
+I gather RSS is more popular. Most aggregators can read both RSS and Atom just fine.
+The shortcomings of RSS are not anything that is likely to bother any but
+the geekiest users. I leave it as an exercise to the reader to decide if it
+matters enough to spend any cognitive cycles on.
 </p>
 
         <script src="javascripts/blog_signature.js"></script>
