--- a/blog.html
+++ b/blog.html
@@ -142,7 +142,7 @@
 
         <h3>Book project: Small Tech</h3>
         <p>Small Tech is a book about doing analytics, data, and machine learning
-        in small and mediums-sized bootstrapped companies</h3> 
+        in small and medium-sized bootstrapped companies</h3> 
         <ul>
           <li>
             <a href="https://www.brandonrohrer.com/study_shoppi.html">
@@ -619,6 +619,10 @@
             <a href="ssh_at_home.html">
               Setting up an ssh server</a>
             Notes from my home hackery.
+          </li>
+          <li>
+            <a href="rss.html">
+              How to start publishing an RSS feed</a>
           </li>
         </ul>          
 
