--- a/rss.html
+++ b/rss.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <script type="text/javascript">var blog_title = "How to start an RSS feed";</script>
+  <script type="text/javascript">var blog_title = "How to start publishing an RSS feed";</script>
   <script type="text/javascript">var publication_date = "August 17, 2025";</script>
   <head>
     <link rel="icon" href="images/ml_logo.png">
