hosting added to blog

--- a/blog.html
+++ b/blog.html
@@ -624,6 +624,10 @@
             <a href="rss.html">
               How to start publishing an RSS feed</a>
           </li>
+          <li>
+            <a href="hosting.html">
+              Hosting your own website</a>
+          </li>
         </ul>          
 
         <h3>Unsolicited Advice</h3>
