web hosting added to blog

--- a/blog.html
+++ b/blog.html
@@ -626,7 +626,11 @@
           </li>
           <li>
             <a href="hosting.html">
-              Hosting your own website</a>
+              Host your own web server</a>
+          </li>
+          <li>
+            <a href="hosting2.html">
+              Set up a domain name for your website</a>
           </li>
         </ul>          
 
