--- a/hosting2.html
+++ b/hosting2.html
@@ -2,7 +2,7 @@
 <html>
 
   <script type="text/javascript">var blog_title = "Attach your web server to a domain name";</script>
-  <script type="text/javascript">var publication_date = "September 01, 2025";</script>
+  <script type="text/javascript">var publication_date = "September 02, 2025";</script>
   <head>
     <link rel="icon" href="images/ml_logo.png">
     <meta charset='utf-8'>
@@ -252,10 +252,7 @@ gave me
 <p>
 <pre>
 Server:		2001:558:feed::1
-Address:	2001:558:feed::1#53
-</p>
-
-<p>
+Address:	2001:558:feed::1#53 <br>
 Non-authoritative answer:
 Name:	e2eml.school
 Address: 138.197.69.146
@@ -332,7 +329,9 @@ Wizard Zines</a>
 is an amazing explainer.
 There are
 <a href="https://www.brandonrohrer.com/git_resources">some other helpful resources</a>
-here, especially <a href="https://ohshitgit.com">Oh shit, git!</a>, the
+here, especially <a href="https://ohshitgit.com">Oh shit, git!</a> (
+also available <a href="https://wizardzines.com/zines/oh-shit-git/">as a zine</a>
+), the
 repair kit in case things go off the rails.
 </p>
 
