hosting security post added

--- a/blog.html
+++ b/blog.html
@@ -632,6 +632,10 @@
             <a href="hosting2.html">
               Set up a domain name for your website</a>
           </li>
+          <li>
+            <a href="hosting3.html">
+              Make your webserver secure</a>
+          </li>
         </ul>          
 
         <h3>Unsolicited Advice</h3>
