--- a/blog.html
+++ b/blog.html
@@ -621,20 +621,20 @@
             Notes from my home hackery.
           </li>
           <li>
-            <a href="rss.html">
-              How to start publishing an RSS feed</a>
-          </li>
-          <li>
             <a href="hosting.html">
-              Host your own web server</a>
+              Self-hosting 1: Host your own web server</a>
           </li>
           <li>
             <a href="hosting2.html">
-              Set up a domain name for your website</a>
+              Self-hosting 2: Set up a domain name for your website</a>
           </li>
           <li>
             <a href="hosting3.html">
-              Make your webserver secure</a>
+              Self-hosting 3: Make your webserver secure</a>
+          </li>
+          <li>
+            <a href="rss.html">
+              Self-hosting 4: How to start publishing an RSS feed</a>
           </li>
         </ul>          
 
