--- a/html/standard_normalization.html
+++ b/html/standard_normalization.html
@@ -22,9 +22,7 @@
           It's often useful to take a signal and shift and scale it so that
           it has a particlar mean and variance. For a mean of 0 and
           a variance of 1, this is known as
-          <a href="
-            https://en.wikipedia.org/wiki/Feature_scaling#Standardization_(Z-score_Normalization)
-          ">
+          <a href="https://en.wikipedia.org/wiki/Feature_scaling#Standardization_(Z-score_Normalization)">
             standardization or Z-score normalization</a>.
         </p>
         <p>
