caring for your webserver published

--- a/html/blog.html
+++ b/html/blog.html
@@ -627,8 +627,12 @@
               Self-hosting 3: Make your webserver secure</a>
           </li>
           <li>
+            <a href="hosting4.html">
+              Self-hosting 4: Caring for your webserver</a>
+          </li>
+          <li>
             <a href="rss.html">
-              Self-hosting 4: How to start publishing an RSS feed</a>
+              Self-hosting 5: How to start publishing an RSS feed</a>
           </li>
         </ul>          
 
