--- a/html/hosting4.html
+++ b/html/hosting4.html
@@ -2,7 +2,7 @@
 <html>
 
   <script type="text/javascript">var blog_title = "Caring for your webserver";</script>
-  <script type="text/javascript">var publication_date = "September 21, 2025";</script>
+  <script type="text/javascript">var publication_date = "September 25, 2025";</script>
   <head>
     <link rel="icon" href="images/ml_logo.png">
     <meta charset='utf-8'>
@@ -387,7 +387,10 @@ on average, while serving a few thousand page views per day. It helps me
 keep my hosting costs low.
 </p>
 
-<h2><a id="Parse-logs"></a><a href="#Parse-logs">Parse logs</a></h2>
+<p>
+<img alt="The baseline bandwidth of the webserver has an average of about 10 kb/s
+" src="baseline_bandwith.png">
+</p>
 
         <script src="javascripts/blog_signature.js"></script>
       </section>
