--- a/html/hosting4.html
+++ b/html/hosting4.html
@@ -2,7 +2,7 @@
 <html>
 
   <script type="text/javascript">var blog_title = "Caring for your webserver";</script>
-  <script type="text/javascript">var publication_date = "September 25, 2025";</script>
+  <script type="text/javascript">var publication_date = "September 27, 2025";</script>
   <head>
     <link rel="icon" href="images/ml_logo.png">
     <meta charset='utf-8'>
@@ -389,7 +389,7 @@ keep my hosting costs low.
 
 <p>
 <img alt="The baseline bandwidth of the webserver has an average of about 10 kb/s
-" src="baseline_bandwith.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/hosting/baseline_bandwith.png">
 </p>
 
         <script src="javascripts/blog_signature.js"></script>
