--- a/html/hosting4.html
+++ b/html/hosting4.html
@@ -389,7 +389,7 @@ keep my hosting costs low.
 
 <p>
 <img alt="The baseline bandwidth of the webserver has an average of about 10 kb/s
-" src="https://github.com/brohrer/blog_images/blob/cffc88fdcee5bb4624ca41076ab17c5a09f0bc92/hosting/baseline_bandwidth.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/hosting/baseline_bandwidth.png">
 </p>
 
         <script src="javascripts/blog_signature.js"></script>
